welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:6: error: ambiguous reference to overloaded definition,
both method avance in class MethodsPictureLarge of type (n: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
      avance
      ^